Lot of refactor changes following PR suggestions
-Moved fragment_global.xml piechart configuration  code from GlobalFragment.kt into PieChartBuilder.kt

-Hardcoded dimensions into dimens.xml

-Created a compound view for fragment_global.xml cardViews named CovidCustomCard.kt

--- a/app/src/main/res/layout/fragment_global.xml
+++ b/app/src/main/res/layout/fragment_global.xml
@@ -12,14 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        tools:context=".ui.global.GlobalFragment"
         android:animateLayoutChanges="true">
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/circular_chart"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="24dp"
+            android:layout_width="@dimen/pie_chart_size"
+            android:layout_height="@dimen/pie_chart_size"
+            android:layout_marginStart="@dimen/parent_left_right_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +27,7 @@
             android:id="@+id/last_update_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="@dimen/parent_left_right_margin"
             android:layout_marginBottom="?attr/actionBarSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +37,7 @@
             android:id="@+id/last_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/parent_left_right_margin"
             android:layout_marginBottom="?attr/actionBarSize"
             android:text="@string/last_update_date"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,9 +47,9 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/cases_numbers_size"
             android:text="@string/global"
-            android:textSize="20sp"
+            android:textSize="@dimen/title_size"
             android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,159 +66,40 @@
             app:layout_constraintTop_toTopOf="@+id/title" />
 
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView"
+        <com.example.ncov19traking.ui.CovidCustomCard
+            android:id="@+id/covid_total_cases_card"
             android:layout_width="@dimen/cards_width"
             android:layout_height="@dimen/cards_height"
             android:layout_marginTop="@dimen/cards_margin_parent_top"
-            android:layout_marginEnd="@dimen/cards_margin_parent_end"
+            android:layout_marginEnd="@dimen/parent_left_right_margin"
+            app:titleText="@string/total_cases_title"
+            app:caseNumberTextColor="@color/textColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/total_cases_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/text_card_padding"
-                    android:text="@string/total_cases_title"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="@dimen/home_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/total_cases"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/cases_numbers_size"
-                    app:layout_constraintBottom_toTopOf="@+id/percentageCasesDifference"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="1244352" />
-
-                <TextView
-                    android:id="@+id/percentageCasesDifference"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/increase_percentage_text_size"
-                    android:layout_marginBottom="@dimen/text_card_padding"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/percentage_example" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView2"
+        <com.example.ncov19traking.ui.CovidCustomCard
+            android:id="@+id/covid_recovered_cases_card"
             android:layout_width="@dimen/cards_width"
             android:layout_height="@dimen/cards_height"
             android:layout_marginTop="@dimen/cards_margin_parent_top"
-            android:layout_marginEnd="@dimen/cards_margin_parent_end"
+            android:layout_marginEnd="@dimen/parent_left_right_margin"
+            app:titleText="@string/recovered_title"
+            app:caseNumberTextColor="@color/recoveredColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView">
+            app:layout_constraintTop_toBottomOf="@+id/covid_total_cases_card"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/recovered2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/text_card_padding"
-                    android:text="@string/recovered_title"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="@dimen/home_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/recovered_numbers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/recoveredColor"
-                    android:textSize="@dimen/cases_numbers_size"
-                    app:layout_constraintBottom_toTopOf="@+id/percentageRecoveredDifference"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="342352" />
-
-                <TextView
-                    android:id="@+id/percentageRecoveredDifference"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/increase_percentage_text_size"
-                    android:layout_marginBottom="@dimen/text_card_padding"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/percentage_example" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
+        <com.example.ncov19traking.ui.CovidCustomCard
+            android:id="@+id/covid_deaths_cases_card"
             android:layout_width="@dimen/cards_width"
             android:layout_height="@dimen/cards_height"
             android:layout_marginTop="@dimen/cards_margin_parent_top"
-            android:layout_marginEnd="@dimen/cards_margin_parent_end"
+            android:layout_marginEnd="@dimen/parent_left_right_margin"
             android:layout_marginBottom="@dimen/cards_margin_bottom_from_parent"
+            app:titleText="@string/deaths_title"
+            app:caseNumberTextColor="@color/deathsColor"
             app:layout_constraintBottom_toTopOf="@+id/last_update_date"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/deaths_cases_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/text_card_padding"
-                    android:text="@string/deaths_title"
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textSize="@dimen/home_text_size"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/deaths_numbers"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/deathsColor"
-                    android:textSize="@dimen/cases_numbers_size"
-                    app:layout_constraintBottom_toTopOf="@+id/percentageDeathsDifference"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="2435324" />
-
-                <TextView
-                    android:id="@+id/percentageDeathsDifference"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/text_card_padding"
-                    android:textSize="@dimen/increase_percentage_text_size"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:text="@string/percentage_example" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.card.MaterialCardView>
+            app:layout_constraintTop_toBottomOf="@+id/covid_recovered_cases_card"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
