--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,11 @@
     <dimen name="cards_width">150dp</dimen>
     <dimen name="cards_height">100dp</dimen>
     <dimen name="cards_margin_parent_top">64dp</dimen>
-    <dimen name="cards_margin_parent_end">24dp</dimen>
+    <dimen name="parent_left_right_margin">24dp</dimen>
     <dimen name="text_card_padding">8dp</dimen>
     <dimen name="cases_numbers_size">16sp</dimen>
     <dimen name="increase_percentage_text_size">12sp</dimen>
     <dimen name="cards_margin_bottom_from_parent">35dp</dimen>
+    <dimen name="pie_chart_size">150dp</dimen>
+    <dimen name="title_size">20sp</dimen>
 </resources>
